{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 748,
  "lineage": "6954dfe2-c364-6612-4660-8d54d31656d5",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_to_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:829282483222:security-group/sg-0a695471ced8cfcb9",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0a695471ced8cfcb9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_to_eks",
            "name_prefix": "",
            "owner_id": "829282483222",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_to_eks"
            },
            "tags_all": {
              "Name": "allow_to_eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-68f0ee0f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:829282483222:security-group-rule/sgr-070a2aaa57afff568",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-070a2aaa57afff568",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a695471ced8cfcb9",
            "security_group_rule_id": "sgr-070a2aaa57afff568",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.allow_to_eks"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:829282483222:security-group/sg-0234c7f916c13ba92",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0234c7f916c13ba92",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all inbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "blue_eks-cluster-cluster-20241001100516882100000001",
            "name_prefix": "blue_eks-cluster-cluster-",
            "owner_id": "829282483222",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "poc",
              "Name": "blue_eks-cluster-cluster",
              "Template": "base eks_cluster module"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "blue_eks-cluster-cluster",
              "Template": "base eks_cluster module"
            },
            "timeouts": null,
            "vpc_id": "vpc-68f0ee0f"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_allow_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all inbound traffic",
            "from_port": 0,
            "id": "sgrule-1505646666",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0234c7f916c13ba92",
            "security_group_rule_id": "sgr-0ca525f3e028e7a4a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    }
  ]
}